// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component Should match a skin snapshot 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c3 .c3 {
  color: #424242;
  margin-left: 0;
}

.c5 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c5 .c1 > .c3 .c3 {
  color: #1250C4;
  margin-left: 0;
}

.c6 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 .c3 {
  color: #004D40;
  margin-left: 0;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 .c3 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      neutral
    </span>
    <button
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 2`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c5 .c1 > .c3 .c3 {
  color: #424242;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #E5EDFC;
  border: 1.5px solid #1250C4;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c3 .c3 {
  color: #1250C4;
  margin-left: 0;
}

.c6 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 .c3 {
  color: #004D40;
  margin-left: 0;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 .c3 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      blue
    </span>
    <button
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 3`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c5 .c1 > .c3 .c3 {
  color: #424242;
  margin-left: 0;
}

.c6 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 .c3 {
  color: #1250C4;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #dcedc8;
  border: 1.5px solid #004D40;
  color: #004D40;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c3 .c3 {
  color: #004D40;
  margin-left: 0;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 .c3 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      success
    </span>
    <button
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 4`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c5 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c5 .c1 > .c3 .c3 {
  color: #424242;
  margin-left: 0;
}

.c6 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 .c3 {
  color: #1250C4;
  margin-left: 0;
}

.c7 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 .c3 {
  color: #004D40;
  margin-left: 0;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #ffefd6;
  border: 1.5px solid #f09100;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c3 .c3 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      warning
    </span>
    <button
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match a skin snapshot 5`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c3 .c3 {
  color: #424242;
  margin-left: 0;
}

.c5 .c1 > .c3 {
  color: #1250C4;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c5 .c1 > .c3 .c3 {
  color: #1250C4;
  margin-left: 0;
}

.c6 .c1 > .c3 {
  color: #004D40;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c6 .c1 > .c3 .c3 {
  color: #004D40;
  margin-left: 0;
}

.c7 .c1 > .c3 {
  color: #f09100;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c7 .c1 > .c3 .c3 {
  color: #f09100;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      error
    </span>
    <button
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot of a simple alert 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c4:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 > .c3 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c3 .c3 {
  color: #424242;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <span>
      Sample alert
    </span>
    <button
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c3 c4"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Alert component Should match the snapshot with an icon 1`] = `
.Button-module__button___AbcpN {
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-weight: 700;
  justify-content: center;
  transition: all .2s ease-in-out;
}

.Button-module__button-default___miWV3 {
  color: var(--qtm-colors-neutral-0);
}

.Button-module__button-default-primary___bURr2 {
  background-color: var(--qtm-colors-primary-700);
  border: 2px solid var(--qtm-colors-primary-700);
}

.Button-module__button-icon___c2VCp {
  pointer-events: none;
}

.Button-module__button-icon-medium___ppo2m,
.Button-module__button-icon-small___m8db9,
.Button-module__button-icon-xsmall___prEKP {
  width: calc(var(--qtm-base-font-size)*1.5);
}

.Button-module__button-medium___qo6Ym,
.Button-module__button-small___HWutw {
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-medium);
}

.Button-module__button-medium___qo6Ym {
  font-size: var(--qtm-base-font-size);
  line-height: calc(var(--qtm-base-font-size)*1.5);
  min-height: var(--qtm-spacing-xxlarge);
}

.Button-module__shadow-2-neutral-500___hxqSk {
  --qtm-shadow-umbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-umbra-opacity));
  --qtm-shadow-penumbra-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-penumbra-opacity));
  --qtm-shadow-ambient-neutral-500-color: rgba(153,153,153,var(--qtm-shadow-ambient-opacity));
  box-shadow: 0 3px 1px -2px var(--qtm-shadow-umbra-neutral-500-color),0 2px 2px 0 var(--qtm-shadow-penumbra-neutral-500-color),0 1px 5px 0 var(--qtm-shadow-ambient-neutral-500-color);
}

.Button-module__icon-button___gjVoG {
  background-color: transparent;
  border: none;
  border-radius: 50%;
  box-shadow: none;
  color: hsla(0,0%,60%,.5);
  outline: none;
  width: 40px;
}

.c2 {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > span {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  width: 24px;
}

.c6 {
  height: auto;
  opacity: 0.8;
  padding: 0;
  -webkit-transition: opacity 0.4s ease;
  transition: opacity 0.4s ease;
  width: auto;
}

.c6:hover {
  background: none;
  opacity: 1;
}

.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  font-size: 16px;
  background-color: #e0e0e0;
  border: 1.5px solid #424242;
  color: #424242;
  padding: 12px 16px;
}

.c0 .c1 .c3 {
  color: #424242;
  margin-right: 16px;
}

.c0 .c1 > .c5 {
  color: #424242;
  margin: 0 0 0 16px !important;
  min-height: 0;
  opacity: 1;
}

.c0 .c1 > .c5 .c5 {
  color: #424242;
  margin-left: 0;
}

<div
  class="c0"
  role="alert"
>
  <div
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c3 c4 css-i4bv87-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="InfoIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"
      />
    </svg>
    <span>
      Sample alert
    </span>
    <button
      class="Button-module__button___AbcpN Button-module__button-medium___qo6Ym Button-module__button-default___miWV3 Button-module__button-default-primary___bURr2 Button-module__shadow-2-neutral-500___hxqSk Button-module__shadow-4-primary-900___HdA30 Button-module__shadow-4-primary-700___Gs4yK Button-module__shadow-8-primary-900___f0GvH Button-module__icon-button___gjVoG c5 c6"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium Button-module__button-icon___c2VCp Button-module__button-icon-medium___ppo2m css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </div>
</div>
`;
